code cleaning (responses unification, cleaning of swagger spec)
